--- a/src/output.css
+++ b/src/output.css
@@ -1,4 +1,5 @@
 /*! tailwindcss v4.1.4 | MIT License | https://tailwindcss.com */
+@layer properties;
 @layer theme, base, components, utilities;
 @layer theme {
   :root, :host {
@@ -6,6 +7,13 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-amber-50: oklch(98.7% 0.022 95.277);
+    --color-blue-300: oklch(80.9% 0.105 251.813);
+    --color-black: #000;
+    --spacing: 0.25rem;
+    --text-base: 1rem;
+    --text-base--line-height: calc(1.5 / 1);
+    --radius-xl: 0.75rem;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -155,4 +163,237 @@
     display: none !important;
   }
 }
-@layer utilities;
+@layer utilities {
+  .relative {
+    position: relative;
+  }
+  .m-0 {
+    margin: calc(var(--spacing) * 0);
+  }
+  .mt-1 {
+    margin-top: calc(var(--spacing) * 1);
+  }
+  .flex {
+    display: flex;
+  }
+  .grid {
+    display: grid;
+  }
+  .h-\[100\%\] {
+    height: 100%;
+  }
+  .w-\[100\%\] {
+    width: 100%;
+  }
+  .flex-1 {
+    flex: 1;
+  }
+  .grid-cols-\[repeat\(3\,_minmax\(200px\,_auto\)\)\] {
+    grid-template-columns: repeat(3, minmax(200px, auto));
+  }
+  .grid-rows-\[repeat\(1\,_minmax\(auto\,_auto\)\)\] {
+    grid-template-rows: repeat(1, minmax(auto, auto));
+  }
+  .flex-col {
+    flex-direction: column;
+  }
+  .flex-row {
+    flex-direction: row;
+  }
+  .justify-center {
+    justify-content: center;
+  }
+  .gap-\[15rem\] {
+    gap: 15rem;
+  }
+  .rounded-xl {
+    border-radius: var(--radius-xl);
+  }
+  .bg-\[\#659f8f\] {
+    background-color: #659f8f;
+  }
+  .bg-\[\#d66c46\] {
+    background-color: #d66c46;
+  }
+  .bg-amber-50 {
+    background-color: var(--color-amber-50);
+  }
+  .p-\[5rem\] {
+    padding: 5rem;
+  }
+  .p-\[10rem\] {
+    padding: 10rem;
+  }
+  .pr-\[5rem\] {
+    padding-right: 5rem;
+  }
+  .pl-\[5rem\] {
+    padding-left: 5rem;
+  }
+  .text-amber-50 {
+    color: var(--color-amber-50);
+  }
+}
+.section-layout {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.nav-layout {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.form-layout {
+  border-radius: 10px;
+  border-style: var(--tw-border-style);
+  border-width: 0.1rem;
+  border-color: var(--color-black);
+  padding: 15px;
+  font-size: var(--text-base);
+  line-height: var(--tw-leading, var(--text-base--line-height));
+  --tw-shadow: 2px 2px 5px var(--tw-shadow-color, rgba(0,0,0,0.3)), -1px -1px 2px var(--tw-shadow-color, rgba(255,255,255,0.4));
+  box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+}
+.hover-effect-inputs {
+  &:hover {
+    @media (hover: hover) {
+      --tw-translate-y: calc(5px * -1);
+      translate: var(--tw-translate-x) var(--tw-translate-y);
+    }
+  }
+  &:hover {
+    @media (hover: hover) {
+      scale: 1.05;
+    }
+  }
+  &:hover {
+    @media (hover: hover) {
+      --tw-shadow: 4px 4px 10px var(--tw-shadow-color, rgba(0,0,0,0.3)), -2px -2px 5px var(--tw-shadow-color, rgba(255,255,255,0.6));
+      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    }
+  }
+}
+.custom-links {
+  align-self: flex-start;
+  font-family: inherit;
+  color: inherit;
+  text-decoration-line: none;
+  &:hover {
+    @media (hover: hover) {
+      color: var(--color-blue-300);
+    }
+  }
+  &:focus {
+    color: var(--color-blue-300);
+  }
+}
+@property --tw-border-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
+@property --tw-shadow {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0 0 #0000;
+}
+@property --tw-shadow-color {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-shadow-alpha {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 100%;
+}
+@property --tw-inset-shadow {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0 0 #0000;
+}
+@property --tw-inset-shadow-color {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-inset-shadow-alpha {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 100%;
+}
+@property --tw-ring-color {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-ring-shadow {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0 0 #0000;
+}
+@property --tw-inset-ring-color {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-inset-ring-shadow {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0 0 #0000;
+}
+@property --tw-ring-inset {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-ring-offset-width {
+  syntax: "<length>";
+  inherits: false;
+  initial-value: 0px;
+}
+@property --tw-ring-offset-color {
+  syntax: "*";
+  inherits: false;
+  initial-value: #fff;
+}
+@property --tw-ring-offset-shadow {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0 0 #0000;
+}
+@property --tw-translate-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@layer properties {
+  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
+    *, ::before, ::after, ::backdrop {
+      --tw-border-style: solid;
+      --tw-shadow: 0 0 #0000;
+      --tw-shadow-color: initial;
+      --tw-shadow-alpha: 100%;
+      --tw-inset-shadow: 0 0 #0000;
+      --tw-inset-shadow-color: initial;
+      --tw-inset-shadow-alpha: 100%;
+      --tw-ring-color: initial;
+      --tw-ring-shadow: 0 0 #0000;
+      --tw-inset-ring-color: initial;
+      --tw-inset-ring-shadow: 0 0 #0000;
+      --tw-ring-inset: initial;
+      --tw-ring-offset-width: 0px;
+      --tw-ring-offset-color: #fff;
+      --tw-ring-offset-shadow: 0 0 #0000;
+      --tw-translate-x: 0;
+      --tw-translate-y: 0;
+      --tw-translate-z: 0;
+    }
+  }
+}
