--- a/src/input.css
+++ b/src/input.css
@@ -1,24 +1,43 @@
 @import "tailwindcss";
-
+/* Aligning each div child in the grid */
 .section-layout {
     @apply flex flex-col gap-[2rem];
 }
-
+/* Aligning the nav elements */
 .nav-layout {
     @apply flex flex-col gap-[0.5rem];
 }
-
+/* Styling the form input and button */
 .form-layout {
     @apply text-base p-[15px] rounded-[10px] border-black border-[0.1rem] 
         shadow-[2px_2px_5px_rgba(0,0,0,0.3),_-1px_-1px_2px_rgba(255,255,255,0.4)];
   }
-
+/* Interactivity for the form input field and button */
 .hover-effect-inputs {
     @apply hover:shadow-[4px_4px_10px_rgba(0,0,0,0.3),_-2px_-2px_5px_rgba(255,255,255,0.6)] 
         hover:scale-[1.05] hover:-translate-y-[5px];
 }
-
+/* Styling the href links to fit the theme better */
 .custom-links {
     @apply text-inherit no-underline font-[inherit] self-start 
         hover:text-blue-300 focus:text-blue-300;
+}
+/* Adding the pseudo elements to the grid */
+.grid-underline::after {
+    content: "";
+    @apply absolute bottom-0 left-[5rem] w-full h-[0.2rem] bg-[#d66c46];
+}
+
+.grid-codespace-title::before {
+    content: "CODESP/_CE";
+    @apply absolute bottom-[-5rem] left-[5rem] text-[2rem] font-bold block;
+    background: linear-gradient(to right, 
+        white 0%, white 65%, 
+        orange 70%, orange 70%, 
+        white 85%, white 100%);
+    text-shadow: 
+        2px 2px 5px rgba(0, 0, 0, 0.3), 
+        -1px -1px 2px rgba(255, 255, 255, 0.4);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
