--- a/src/input.css
+++ b/src/input.css
@@ -25,12 +25,12 @@
 /* Adding the pseudo elements to the grid */
 .grid-underline::after {
     content: "";
-    @apply absolute bottom-0 left-[5rem] w-full h-[0.2rem] bg-[#d66c46];
+    @apply absolute bottom-0 lg:left-[5rem] w-full h-[0.2rem] bg-[#d66c46];
 }
 
 .grid-codespace-title::before {
     content: "CODESP/_CE";
-    @apply absolute bottom-[-5rem] left-[5rem] text-[2rem] font-bold block;
+    @apply absolute bottom-[-5rem] lg:left-[5rem] text-[2rem] font-bold block;
     background: linear-gradient(to right, 
         white 0%, white 65%, 
         orange 70%, orange 70%, 
@@ -40,4 +40,10 @@
         -1px -1px 2px rgba(255, 255, 255, 0.4);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+.grid-layout {
+    @apply flex flex-col items-start m-0 p-0 relative bg-[#659f8f]
+        md:grid md:grid-cols-[repeat(2,_minmax(200px,_auto))] md:grid-rows-[repeat(2,_minmax(20px,_auto))]
+        lg:grid lg:grid-cols-[repeat(3,_minmax(200px,_auto))] lg:grid-rows-1 lg:gap-[8rem] lg:p-[5rem];
 }
