--- a/src/output.css
+++ b/src/output.css
@@ -165,9 +165,6 @@
   }
 }
 @layer utilities {
-  .relative {
-    position: relative;
-  }
   .m-0 {
     margin: calc(var(--spacing) * 0);
   }
@@ -189,12 +186,6 @@
   .flex-1 {
     flex: 1;
   }
-  .grid-cols-\[repeat\(3\,_minmax\(200px\,_auto\)\)\] {
-    grid-template-columns: repeat(3, minmax(200px, auto));
-  }
-  .grid-rows-\[repeat\(1\,_minmax\(auto\,_auto\)\)\] {
-    grid-template-rows: repeat(1, minmax(auto, auto));
-  }
   .flex-col {
     flex-direction: column;
   }
@@ -203,9 +194,6 @@
   }
   .justify-center {
     justify-content: center;
-  }
-  .gap-\[8rem\] {
-    gap: 8rem;
   }
   .rounded-xl {
     border-radius: var(--radius-xl);
@@ -219,20 +207,31 @@
   .bg-amber-50 {
     background-color: var(--color-amber-50);
   }
-  .p-\[5rem\] {
-    padding: 5rem;
-  }
   .p-\[10rem\] {
     padding: 10rem;
   }
-  .pr-\[5rem\] {
-    padding-right: 5rem;
-  }
-  .pl-\[5rem\] {
-    padding-left: 5rem;
-  }
   .text-amber-50 {
     color: var(--color-amber-50);
+  }
+  .md\:col-span-2 {
+    @media (width >= 48rem) {
+      grid-column: span 2 / span 2;
+    }
+  }
+  .lg\:col-span-1 {
+    @media (width >= 64rem) {
+      grid-column: span 1 / span 1;
+    }
+  }
+  .lg\:pr-\[5rem\] {
+    @media (width >= 64rem) {
+      padding-right: 5rem;
+    }
+  }
+  .lg\:pl-\[5rem\] {
+    @media (width >= 64rem) {
+      padding-left: 5rem;
+    }
   }
 }
 .section-layout {
@@ -293,24 +292,61 @@
   content: "";
   position: absolute;
   bottom: calc(var(--spacing) * 0);
-  left: 5rem;
   height: 0.2rem;
   width: 100%;
   background-color: #d66c46;
+  @media (width >= 64rem) {
+    left: 5rem;
+  }
 }
 .grid-codespace-title::before {
   content: "CODESP/_CE";
   position: absolute;
   bottom: -5rem;
-  left: 5rem;
   display: block;
   font-size: 2rem;
   --tw-font-weight: var(--font-weight-bold);
   font-weight: var(--font-weight-bold);
+  @media (width >= 64rem) {
+    left: 5rem;
+  }
   background: linear-gradient(to right, white 0%, white 65%, orange 70%, orange 70%, white 85%, white 100%);
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3), -1px -1px 2px rgba(255, 255, 255, 0.4);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+.grid-layout {
+  position: relative;
+  margin: calc(var(--spacing) * 0);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: #659f8f;
+  padding: calc(var(--spacing) * 0);
+  @media (width >= 48rem) {
+    display: grid;
+  }
+  @media (width >= 48rem) {
+    grid-template-columns: repeat(2, minmax(200px, auto));
+  }
+  @media (width >= 48rem) {
+    grid-template-rows: repeat(2, minmax(20px, auto));
+  }
+  @media (width >= 64rem) {
+    display: grid;
+  }
+  @media (width >= 64rem) {
+    grid-template-columns: repeat(3, minmax(200px, auto));
+  }
+  @media (width >= 64rem) {
+    grid-template-rows: repeat(1, minmax(0, 1fr));
+  }
+  @media (width >= 64rem) {
+    gap: 8rem;
+  }
+  @media (width >= 64rem) {
+    padding: 5rem;
+  }
 }
 @property --tw-border-style {
   syntax: "*";
