--- a/src/input.css
+++ b/src/input.css
@@ -1,36 +1,39 @@
+/* Try to only create custom classes for repeated code otherwise it defeats the main point of Tailwind */
+
 @import "tailwindcss";
-/* Aligning each div child in the grid */
-.section-layout {
+/* Repeated code for Aligning each div child in the grid */
+.flexbox-section-layout {
     @apply flex flex-col gap-[2rem];
 }
-/* Aligning the nav elements */
+/* Repeated code for Aligning the nav elements */
 .nav-layout {
     @apply flex flex-col gap-[0.5rem];
 }
-/* Styling the form input and button */
+/* Repeated code for Styling the form input and button */
 .form-layout {
-    @apply text-base p-[15px] rounded-[10px] border-black border-[0.1rem] 
+    @apply text-base p-1 w-[40%] rounded-[10px] border-black border-[0.1rem] 
         shadow-[2px_2px_5px_rgba(0,0,0,0.3),_-1px_-1px_2px_rgba(255,255,255,0.4)];
   }
-/* Interactivity for the form input field and button */
+/* Repeated code for Interactivity for the form input field and button */
 .hover-effect-inputs {
     @apply hover:shadow-[4px_4px_10px_rgba(0,0,0,0.3),_-2px_-2px_5px_rgba(255,255,255,0.6)] 
         hover:scale-[1.05] hover:-translate-y-[5px];
 }
-/* Styling the href links to fit the theme better */
+/* Repeated code for Styling the href links to fit the theme better */
 .custom-links {
     @apply text-inherit no-underline font-[inherit] self-start 
         hover:text-blue-300 focus:text-blue-300;
 }
 /* Adding the pseudo elements to the grid */
-.grid-underline::after {
+/* This code is not repeated but it is much cleaner in a custom class and these elements will not really need to be touched again */
+.after-speudo-element-grid-underline::after {
     content: "";
-    @apply absolute bottom-0 lg:left-[5rem] w-full h-[0.2rem] bg-[#d66c46];
+    @apply absolute bottom-0 lg:left-[2rem] w-[90%] h-[0.2rem] bg-[#d66c46];
 }
 
-.grid-codespace-title::before {
+.before-speudo-element-grid-codespace-title::before {
     content: "CODESP/_CE";
-    @apply absolute bottom-[-5rem] lg:left-[5rem] text-[2rem] font-bold block;
+    @apply absolute bottom-[-5rem] lg:left-[2rem] text-[2rem] font-bold block;
     background: linear-gradient(to right, 
         white 0%, white 65%, 
         orange 70%, orange 70%, 
@@ -40,10 +43,4 @@
         -1px -1px 2px rgba(255, 255, 255, 0.4);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-}
-
-.grid-layout {
-    @apply flex flex-col items-start m-0 p-0 relative bg-[#659f8f]
-        md:grid md:grid-cols-[repeat(2,_minmax(200px,_auto))] md:grid-rows-[repeat(2,_minmax(20px,_auto))]
-        lg:grid lg:grid-cols-[repeat(3,_minmax(200px,_auto))] lg:grid-rows-1 lg:gap-[8rem] lg:p-[5rem];
 }
