--- a/src/output.css
+++ b/src/output.css
@@ -165,6 +165,9 @@
   }
 }
 @layer utilities {
+  .relative {
+    position: relative;
+  }
   .m-0 {
     margin: calc(var(--spacing) * 0);
   }
@@ -180,7 +183,10 @@
   .h-\[100\%\] {
     height: 100%;
   }
-  .w-\[100\%\] {
+  .h-full {
+    height: 100%;
+  }
+  .w-full {
     width: 100%;
   }
   .flex-1 {
@@ -192,8 +198,14 @@
   .flex-row {
     flex-direction: row;
   }
+  .items-start {
+    align-items: flex-start;
+  }
   .justify-center {
     justify-content: center;
+  }
+  .gap-\[1rem\] {
+    gap: 1rem;
   }
   .rounded-xl {
     border-radius: var(--radius-xl);
@@ -207,8 +219,14 @@
   .bg-amber-50 {
     background-color: var(--color-amber-50);
   }
-  .p-\[10rem\] {
-    padding: 10rem;
+  .p-\[0\.5rem\] {
+    padding: 0.5rem;
+  }
+  .px-0\.5 {
+    padding-inline: calc(var(--spacing) * 0.5);
+  }
+  .py-\[5rem\] {
+    padding-block: 5rem;
   }
   .text-amber-50 {
     color: var(--color-amber-50);
@@ -218,14 +236,59 @@
       grid-column: span 2 / span 2;
     }
   }
+  .md\:grid {
+    @media (width >= 48rem) {
+      display: grid;
+    }
+  }
+  .md\:grid-cols-\[repeat\(2\,_minmax\(200px\,_auto\)\)\] {
+    @media (width >= 48rem) {
+      grid-template-columns: repeat(2, minmax(200px, auto));
+    }
+  }
+  .md\:grid-rows-\[repeat\(2\,_minmax\(20px\,_auto\)\)\] {
+    @media (width >= 48rem) {
+      grid-template-rows: repeat(2, minmax(20px, auto));
+    }
+  }
+  .md\:gap-\[4rem\] {
+    @media (width >= 48rem) {
+      gap: 4rem;
+    }
+  }
+  .md\:p-\[2rem\] {
+    @media (width >= 48rem) {
+      padding: 2rem;
+    }
+  }
   .lg\:col-span-1 {
     @media (width >= 64rem) {
       grid-column: span 1 / span 1;
     }
   }
-  .lg\:pr-\[5rem\] {
+  .lg\:grid {
     @media (width >= 64rem) {
-      padding-right: 5rem;
+      display: grid;
+    }
+  }
+  .lg\:grid-cols-\[repeat\(3\,_minmax\(200px\,_auto\)\)\] {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(3, minmax(200px, auto));
+    }
+  }
+  .lg\:grid-rows-1 {
+    @media (width >= 64rem) {
+      grid-template-rows: repeat(1, minmax(0, 1fr));
+    }
+  }
+  .lg\:gap-\[8rem\] {
+    @media (width >= 64rem) {
+      gap: 8rem;
+    }
+  }
+  .lg\:py-\[3rem\] {
+    @media (width >= 64rem) {
+      padding-block: 3rem;
     }
   }
   .lg\:pl-\[5rem\] {
@@ -234,7 +297,7 @@
     }
   }
 }
-.section-layout {
+.flexbox-section-layout {
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -245,11 +308,12 @@
   gap: 0.5rem;
 }
 .form-layout {
+  width: 40%;
   border-radius: 10px;
   border-style: var(--tw-border-style);
   border-width: 0.1rem;
   border-color: var(--color-black);
-  padding: 15px;
+  padding: calc(var(--spacing) * 1);
   font-size: var(--text-base);
   line-height: var(--tw-leading, var(--text-base--line-height));
   --tw-shadow: 2px 2px 5px var(--tw-shadow-color, rgba(0,0,0,0.3)), -1px -1px 2px var(--tw-shadow-color, rgba(255,255,255,0.4));
@@ -288,18 +352,18 @@
     color: var(--color-blue-300);
   }
 }
-.grid-underline::after {
+.after-speudo-element-grid-underline::after {
   content: "";
   position: absolute;
   bottom: calc(var(--spacing) * 0);
   height: 0.2rem;
-  width: 100%;
+  width: 90%;
   background-color: #d66c46;
   @media (width >= 64rem) {
-    left: 5rem;
+    left: 2rem;
   }
 }
-.grid-codespace-title::before {
+.before-speudo-element-grid-codespace-title::before {
   content: "CODESP/_CE";
   position: absolute;
   bottom: -5rem;
@@ -308,45 +372,12 @@
   --tw-font-weight: var(--font-weight-bold);
   font-weight: var(--font-weight-bold);
   @media (width >= 64rem) {
-    left: 5rem;
+    left: 2rem;
   }
   background: linear-gradient(to right, white 0%, white 65%, orange 70%, orange 70%, white 85%, white 100%);
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3), -1px -1px 2px rgba(255, 255, 255, 0.4);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-}
-.grid-layout {
-  position: relative;
-  margin: calc(var(--spacing) * 0);
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  background-color: #659f8f;
-  padding: calc(var(--spacing) * 0);
-  @media (width >= 48rem) {
-    display: grid;
-  }
-  @media (width >= 48rem) {
-    grid-template-columns: repeat(2, minmax(200px, auto));
-  }
-  @media (width >= 48rem) {
-    grid-template-rows: repeat(2, minmax(20px, auto));
-  }
-  @media (width >= 64rem) {
-    display: grid;
-  }
-  @media (width >= 64rem) {
-    grid-template-columns: repeat(3, minmax(200px, auto));
-  }
-  @media (width >= 64rem) {
-    grid-template-rows: repeat(1, minmax(0, 1fr));
-  }
-  @media (width >= 64rem) {
-    gap: 8rem;
-  }
-  @media (width >= 64rem) {
-    padding: 5rem;
-  }
 }
 @property --tw-border-style {
   syntax: "*";
