--- a/src/output.css
+++ b/src/output.css
@@ -13,6 +13,8 @@
     --spacing: 0.25rem;
     --text-base: 1rem;
     --text-base--line-height: calc(1.5 / 1);
+    --text-2xl: 1.5rem;
+    --text-2xl--line-height: calc(2 / 1.5);
     --font-weight-bold: 700;
     --radius-xl: 0.75rem;
     --default-font-family: var(--font-sans);
@@ -180,9 +182,6 @@
   .grid {
     display: grid;
   }
-  .h-\[100\%\] {
-    height: 100%;
-  }
   .h-full {
     height: 100%;
   }
@@ -207,6 +206,9 @@
   .gap-\[1rem\] {
     gap: 1rem;
   }
+  .overflow-hidden {
+    overflow: hidden;
+  }
   .rounded-xl {
     border-radius: var(--radius-xl);
   }
@@ -219,14 +221,22 @@
   .bg-amber-50 {
     background-color: var(--color-amber-50);
   }
-  .p-\[0\.5rem\] {
-    padding: 0.5rem;
+  .p-5 {
+    padding: calc(var(--spacing) * 5);
   }
   .px-0\.5 {
     padding-inline: calc(var(--spacing) * 0.5);
   }
   .py-\[5rem\] {
     padding-block: 5rem;
+  }
+  .text-2xl {
+    font-size: var(--text-2xl);
+    line-height: var(--tw-leading, var(--text-2xl--line-height));
+  }
+  .font-bold {
+    --tw-font-weight: var(--font-weight-bold);
+    font-weight: var(--font-weight-bold);
   }
   .text-amber-50 {
     color: var(--color-amber-50);
@@ -300,15 +310,15 @@
 .flexbox-section-layout {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: calc(var(--spacing) * 5);
 }
 .nav-layout {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
 }
-.form-layout {
-  width: 40%;
+.form-button-input-layout {
+  width: 100%;
   border-radius: 10px;
   border-style: var(--tw-border-style);
   border-width: 0.1rem;
@@ -318,6 +328,9 @@
   line-height: var(--tw-leading, var(--text-base--line-height));
   --tw-shadow: 2px 2px 5px var(--tw-shadow-color, rgba(0,0,0,0.3)), -1px -1px 2px var(--tw-shadow-color, rgba(255,255,255,0.4));
   box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  @media (width >= 48rem) {
+    width: 40%;
+  }
 }
 .hover-effect-inputs {
   &:hover {
@@ -356,10 +369,11 @@
   content: "";
   position: absolute;
   bottom: calc(var(--spacing) * 0);
+  left: calc(var(--spacing) * 5);
   height: 0.2rem;
-  width: 90%;
+  width: 100%;
   background-color: #d66c46;
-  @media (width >= 64rem) {
+  @media (width >= 48rem) {
     left: 2rem;
   }
 }
@@ -367,17 +381,23 @@
   content: "CODESP/_CE";
   position: absolute;
   bottom: -5rem;
+  left: calc(var(--spacing) * 5);
+  margin-bottom: calc(var(--spacing) * 5);
   display: block;
   font-size: 2rem;
   --tw-font-weight: var(--font-weight-bold);
   font-weight: var(--font-weight-bold);
-  @media (width >= 64rem) {
+  @media (width >= 48rem) {
     left: 2rem;
   }
   background: linear-gradient(to right, white 0%, white 65%, orange 70%, orange 70%, white 85%, white 100%);
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3), -1px -1px 2px rgba(255, 255, 255, 0.4);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+@property --tw-font-weight {
+  syntax: "*";
+  inherits: false;
 }
 @property --tw-border-style {
   syntax: "*";
@@ -464,13 +484,10 @@
   inherits: false;
   initial-value: 0;
 }
-@property --tw-font-weight {
-  syntax: "*";
-  inherits: false;
-}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
+      --tw-font-weight: initial;
       --tw-border-style: solid;
       --tw-shadow: 0 0 #0000;
       --tw-shadow-color: initial;
@@ -489,7 +506,6 @@
       --tw-translate-x: 0;
       --tw-translate-y: 0;
       --tw-translate-z: 0;
-      --tw-font-weight: initial;
     }
   }
 }
