--- a/src/output.css
+++ b/src/output.css
@@ -200,9 +200,6 @@
   .items-start {
     align-items: flex-start;
   }
-  .justify-center {
-    justify-content: center;
-  }
   .gap-\[1rem\] {
     gap: 1rem;
   }
@@ -289,6 +286,11 @@
   .lg\:grid-rows-1 {
     @media (width >= 64rem) {
       grid-template-rows: repeat(1, minmax(0, 1fr));
+    }
+  }
+  .lg\:justify-center {
+    @media (width >= 64rem) {
+      justify-content: center;
     }
   }
   .lg\:gap-\[8rem\] {
